--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Ressources UX
+email: simon@southsidetech.org
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username: jekyll
+github_username: lesenechals
 
 # Build settings
 theme: just-the-docs
@@ -52,3 +52,26 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+# Aux links for the upper right navigation
+aux_links:
+  "Association South Side Tech":
+    - "https://southsidetech.org"
+
+# Makes Aux links open in a new tab. Default is false
+aux_links_new_tab: true
+
+collections:
+  research:
+    permalink: "/:collection/:path/"
+    output: true
+  interface:
+    permalink: "/:collection/:path/"
+    output: true
+
+just_the_docs:
+  collections:
+    research:
+      name: Expérience utilisateur
+    interface:
+      name: Interface utilisateur
