--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-_site
-.sass-cache
+*.gem
+.bundle
+.ruby-version
 .jekyll-cache
-.jekyll-metadata
-vendor
+.sass-cache
+Gemfile.lock
+node_modules
+.DS_Store
